master.scss
$color-blue: #1FA2FF;
$color-grey: #4c4d54;
$color-lightGrey: #eff1f4;
$color-text: #313239;
$color-highlight: #12D8FA;
$color-minimise: #fcc419;
$color-maximise: #51cf66;
$color-quit: #ff6b6b;
$gradient: #1FA2FF, #12D8FA, #81f1c9;

* {
    box-sizing: border-box;
}

html {
    min-height: 100%;
    font-family: 'Open Sans', sans-serif;
    color: $color-text;
    margin: 0;
    background: linear-gradient(to bottom right, $gradient);
}

body {
    margin: 0;
    color: #313239;
}

.bops,
.button:focus,
.textInput:focus {
    outline: 0;
}

.header {
    background-color: $color-grey;
    color: white;
    height: 30px;
    padding: 4px 0;
    border-radius: 15px 15px 0 0;
    text-align: center;
    transition: border-radius 0.4s 0.5s;

    .bops {
        display: inline-block;
        margin: 0 0 0 5px;
        height: 15px;
        width: 15px;
        float: right;
        position: relative;
        right: 10px;
        top: -17px;
        border-radius: 100px;
        cursor: pointer;
        transition: all 0.5s;

        &:hover {
            filter: opacity(70%);
        }
    }

    .minimise {
        background-color: #fcc419;
    }

    .maximise {
        background-color: #51cf66;
    }

    .quit {
        background-color: #ff6b6b;
    }
}

//animations////////////////////
.content.hidden {
    opacity: 0 !important;
    height: 0 !important;
    padding: 0 !important;
    transition: opacity 0.4s, height 0.4s 0.7s, padding 0.4s 0.7s !important;
}
///////////////////////////////

.firstProgram {
    width: 500px;
    margin: 70px auto;
    background-color: white;
    border-radius: 18px;

    .content {
        height: 250px;
        padding: 26px 0;
        border-radius: 0 0 18px 18px;
        transition: opacity 0.4s 0.7s, height 0.4s, padding 0.4s;

        .title {
            margin: 0;
            text-align: center;
            font-weight: 400;
            letter-spacing: 6px;
            text-transform: capitalize;
        }

        .textInput {
            background-color: $color-lightGrey;
            display: block;
            margin: 28px auto;
            padding: 12px;
            width: 90%;
            font-size: 20px;
            border-radius: 6px;
            border: solid 2px $color-lightGrey;
            text-align: center;
            transition: all 0.7s;

            &:focus {
                border: solid 2px #12D8FA;
            }
        }

        .button {
            background-color: white;
            display: block;
            margin: 0 auto;
            padding: 15px 50px;
            border-radius: 100px;
            font-size: 16px;
            border: 2px solid #1FA2FF;
            letter-spacing: 5px;
            cursor: pointer;
            transition: all 0.5s;

            &:hover {
                background-color: #1FA2FF;
                color: white;
            }
        }

        .textOutput {
            opacity: 0;
            background-color: $color-blue;
            color: white;
            width: 70%;
            height: 40px;
            word-break: break-all;
            line-height: 25px;
            padding: 10px;
            border-radius: 4px;
            text-align: center;
            margin: 20px auto 0;
            overflow: hidden;
            cursor: pointer;
            transition: all 0.6s, opacity 0.3s 0.5s;
        }
    }
}

.secondProgram {
    width: 412px;
    margin: 0 auto 70px;
    background-color: white;
    border-radius: 18px;

    .content {
        height: 550px;
        border-radius: 0 0 18px 18px;
        transition: opacity 0.4s 0.7s, height 0.4s, padding 0.4s;

        .button {
            background-color: $color-lightGrey;
            display: inline-block;
            height: 70px;
            width: 70px;
            text-align: center;
            vertical-align: middle;
            line-height: 70px;
            border-radius: 100px;
            font-size: 36px;
            cursor: pointer;
            transition: all 0.3s;
            margin: 7px 5px;

            &:hover {
                background-color: #1FA2FF;
                color: white;
            }
        }

        .textOutput {
            background-color: $color-lightGrey;
            font-size: 30px;
            line-height: 50px;
            vertical-align: middle;
            width: 85%;
            height: 70px;
            padding: 10px 15px;
            border-radius: 4px;
            text-align: right;
            margin: 30px auto;
            font-weight: 400;
            letter-spacing: 6px;
            overflow: scroll;
        }

        .number0 {
            width: 155px;
        }

        .sign {
            background-color: $color-blue;
            color: white;

            &:hover {
                background: black;
            }
        }

        .other {
            background-color: #868e96;
            color: white;
        }
    }
}

